fix dashboard layout on mobile view

--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -63,6 +63,8 @@
 #dropdown-item-button {
     background-color: #2D5295;
     border: #2D5295;
+    margin-right: 1rem;
+    margin-top: 1rem;
 }
 
 .dropdown-menu {
@@ -70,7 +72,7 @@
 }
 
 .filters-submit-button {
-    margin-left: 1rem;
+    margin-top: 1rem;
 }
 
 @media screen and (max-width: 1200px){
@@ -154,7 +156,6 @@
     .page-header {
         grid-column: 1/3;
         grid-row: 2/3;
-        padding-top: 3rem;
         margin: 0 2rem;
         text-align: center;
     }
@@ -162,8 +163,8 @@
     .filters {
         grid-column: 1/3;
         grid-row: 3/4;
-        margin-left: auto;
-        margin-right: auto;
+        margin-left: 2rem;
+        margin-right: 2rem;
     }
     
     .balance-card {
